<resources>
    <string name="app_name">Delivery Paragominas</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Pesquisar</string>
    <string name="title_activity_maps">Mapa</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <array name="Pizzarias_Delivery">
        <item>@drawable/pizzaria1</item>
        <item>@drawable/pizzaria2</item>
        <item>@drawable/pizzaria3</item>
        <item>@drawable/pizzaria4</item>
    </array>
    <string name="title_activity_toddes">ToddesActivity</string>
    <string name="tab_text_1">Cardápio</string>
    <string name="tab_text_2">Promoções</string>
    <string name="tab_text_3">Carrinho</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- pratos cardapio-->
    <string name="cardapio_pt1_nome">Pizza de Calabresa</string>
    <string name="cardapio_pt2_nome">Pizza Portuguesa</string>
    <string name="cardapio_pt3_nome">Hamburger Tradicional</string>
    <string name="cardapio_pt4_nome">Sanduiche Natural</string>
    <string name="cardapio_pt5_nome">Big Combo</string>

    <!-- Valores cardapio-->
    <string name="cardapio_pt1_vl">R$ 15,00 / 20,00 / 25,00 / 35,00</string>
    <string name="cardapio_pt2_vl">R$ 16,50 / 23,00 / 28,00 / 39,90</string>
    <string name="cardapio_pt3_vl">R$ 16,50</string>
    <string name="cardapio_pt4_vl">R$ 15,00</string>
    <string name="cardapio_pt5_vl">R$ 38,50</string>
    <string name="title_activity_prato">PratoActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
