<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.softwareonze.deliveryparagominas.ModeloInterno.CardapioFragment">


    <!-- TODO: Update blank fragment layout -->

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:id="@+id/id_table1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imagePrato1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/prato1" />

                <TextView
                    android:id="@+id/textPrato1_nome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/cardapio_pt1_nome"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textPrato1_valor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cardapio_pt1_vl"
                    android:textStyle="italic" />

                <Button
                    android:id="@+id/button_prato1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="24dp"
                    android:background="@android:color/holo_green_light"
                    android:text="Add Pedido"/>

            </LinearLayout>

        </TableRow>

        <TableRow
            android:id="@+id/id_table2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imagePrato2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/prato2" />

                    <TextView
                        android:id="@+id/textPrato2_nome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/cardapio_pt2_nome"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textPrato2_valor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cardapio_pt2_vl"
                        android:textStyle="italic" />

                <Button
                    android:id="@+id/button_prato2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="24dp"
                    android:background="@android:color/holo_green_light"
                    android:text="Add Pedido" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:id="@+id/id_table3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imagePrato3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/prato3" />

                    <TextView
                        android:id="@+id/textPrato3_nome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/cardapio_pt3_nome"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textPrato3_valor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cardapio_pt3_vl"
                        android:textStyle="italic" />

                <Button
                    android:id="@+id/button_prato3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="24dp"
                    android:background="@android:color/holo_green_light"
                    android:text="Add Pedido" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:id="@+id/id_table4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imagePrato4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/prato4" />

                    <TextView
                        android:id="@+id/textPrato4_nome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/cardapio_pt4_nome"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textPrato4_valor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cardapio_pt4_vl"
                        android:textStyle="italic" />

                <Button
                    android:id="@+id/button_prato4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="24dp"
                    android:background="@android:color/holo_green_light"
                    android:text="Add Pedido" />


            </LinearLayout>

        </TableRow>

        <TableRow
            android:id="@+id/id_table5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imagePrato5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/prato5" />

                    <TextView
                        android:id="@+id/textPrato5_nome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/cardapio_pt5_nome"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textPrato5_valor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cardapio_pt5_vl"
                        android:textStyle="italic" />

                <Button
                    android:id="@+id/button_prato5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="24dp"
                    android:background="@android:color/holo_green_light"
                    android:text="Add Pedido" />

            </LinearLayout>

        </TableRow>


    </TableLayout>
</ScrollView>
